--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.8",
+    "@vime/core": "^5.3.1",
+    "@vime/react": "^5.3.1",
     "date-fns": "^2.28.0",
     "graphql": "^16.5.0",
     "install": "^0.13.0",
     "npm": "^8.13.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
